--- a/FPGAVision.qsf
+++ b/FPGAVision.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP1C3T144C6
 set_global_assignment -name TOP_LEVEL_ENTITY TopLevel
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 11.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:27:55  MARCH 15, 2016"
-set_global_assignment -name LAST_QUARTUS_VERSION 11.0
+set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP0.11"
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -77,12 +77,18 @@ set_global_assignment -name VERILOG_FILE serialAsyncTransmitter.v
 set_global_assignment -name VERILOG_FILE serialAsyncReceiver.v
 set_location_assignment PIN_69 -to SERIAL_TX
 set_location_assignment PIN_68 -to SERIAL_RX
-set_location_assignment PIN_57 -to SERIAL_RX_BUSY
-set_location_assignment PIN_55 -to SERIAL_TX_BUSY
 set_global_assignment -name VERILOG_FILE camRGB656Receive.v
 set_global_assignment -name VERILOG_FILE camSCCBCtrl.v
 set_global_assignment -name VERILOG_FILE camOV7670Init.v
 set_global_assignment -name VERILOG_FILE camSccbClk.v
 set_global_assignment -name BDF_FILE camSccb.bdf
 set_global_assignment -name VERILOG_FILE CameraSetup.v
+set_location_assignment PIN_57 -to led0
+set_location_assignment PIN_55 -to led1
+set_location_assignment PIN_52 -to led2
+set_location_assignment PIN_49 -to led3
+set_location_assignment PIN_47 -to led4
+set_location_assignment PIN_42 -to led5
+set_global_assignment -name VHDL_FILE debouncer.vhd
+set_global_assignment -name VERILOG_FILE clkDiv16.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
