--- a/FPGAVision.qsf
+++ b/FPGAVision.qsf
@@ -91,4 +91,11 @@ set_location_assignment PIN_47 -to led4
 set_location_assignment PIN_42 -to led5
 set_global_assignment -name VHDL_FILE debouncer.vhd
 set_global_assignment -name VERILOG_FILE clkDiv16.v
+set_global_assignment -name VERILOG_FILE SPI_slave.v
+set_global_assignment -name BDF_FILE SerialController.bdf
+set_global_assignment -name VERILOG_FILE REdetect.v
+set_global_assignment -name VERILOG_FILE FEdetect.v
+set_global_assignment -name VERILOG_FILE unitDelay.v
+set_global_assignment -name VERILOG_FILE SerialDataCtrl.v
+set_global_assignment -name BSF_FILE SerialController.bsf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
