--- a/FPGAVision.qsf
+++ b/FPGAVision.qsf
@@ -98,4 +98,13 @@ set_global_assignment -name VERILOG_FILE FEdetect.v
 set_global_assignment -name VERILOG_FILE unitDelay.v
 set_global_assignment -name VERILOG_FILE SerialDataCtrl.v
 set_global_assignment -name BSF_FILE SerialController.bsf
+set_global_assignment -name VERILOG_FILE colorMapper.v
+set_location_assignment PIN_120 -to VGA_HS
+set_location_assignment PIN_121 -to VGA_VS
+set_location_assignment PIN_122 -to VGA_R0
+set_location_assignment PIN_123 -to VGA_G0
+set_location_assignment PIN_124 -to VGA_B0
+set_global_assignment -name VERILOG_FILE pixelToMemAddr.v
+set_global_assignment -name VERILOG_FILE imgMasker.v
+set_global_assignment -name MIF_FILE pixelRAMInit.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
